# render2d

./: pyproject.toml
examples/: city_line.py
render2d/: blur.py  canvas.py  circle.py  effect.py  layer.py  polygon.py  rectangle.py  render2d.py  renderable.py  tint.py
tests/: test1.py
